fix viewport height issues on mobile

--- a/heroes/heroes.css
+++ b/heroes/heroes.css
@@ -157,7 +157,8 @@ table thead{
 
 table tbody{
 	display:block;
-	height:calc(99.5vh - 59px - 28px);
+	height:calc(99.5vh - 61px - 26px);  /* Fallback for browsers that don't support Custom Properties */
+	height:calc((var(--vh, 1vh) * 100) - 91px);
 
 	/* scroll, not auto, for smooth scrolling on iDevices */
 	overflow-y: scroll;
